# mkdocs-drawio

./: .gitignore  404.html  LICENSE  README.md  circle-square.drawio  index.html  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  python-publish.yml
configuration/: index.html
css/: drawio-darkmode.css
documentation/: mkdocs.yml
documentation/docs/: circle-square.drawio  index.md  plumbing.md
documentation/docs/tests/code-blocks/: index.md
documentation/docs/tests/configuration/: layers.drawio
documentation/docs/tests/error-handling/: index.md
documentation/docs/tests/external-url/: index.md
documentation/docs/tests/pagging/: index.md  test.drawio
documentation/docs/tests/relative-paths/: index.md
documentation/docs/tests/simple-diagram/: index.md  test.drawio
example/: mkdocs-material.yml  mkdocs.yml  requirements.txt
example/docs/: circle-square.drawio  configuration.md  index.md  plumbing.md
example/docs/assets/: test.drawio
example/docs/test1/: index.md
example/docs/test2/: index.md
example/docs/test3/: index.md
example/docs/test4/: example.md  index.md
example/docs/tests/assets/: test.drawio
example/docs/tests/code-blocks/: index.md  test.drawio
example/docs/tests/configuration/: index.md  layers.drawio  math.drawio  tooltips.drawio
example/docs/tests/error-handling/: index.md
example/docs/tests/external-url/: index.md
example/docs/tests/pagging/: index.md  test.drawio
example/docs/tests/relative-paths/: example.md
example/docs/tests/simple-diagram/: index.md  test.drawio
examples/: mkdocs-classic.yml  mkdocs.yml
examples/docs/: configuration.md  index.md
examples/docs/tests/code-blocks/: index.md
examples/docs/tests/configuration/: tooltips.drawio
examples/docs/tests/external-url/: index.md
examples/docs/tests/hyperlinks/: index.md
examples/docs/tests/pagging/: index.md
examples/docs/tests/png/: index.md
examples/docs/tests/relative-paths/: example.md  index.md
examples/docs/tests/style-diagram/: index.md
examples/docs/tests/svg/: index.md
examples/docs/tests/zoom-diagram/: index.md
javascripts/: drawio-reload.js
js/: drawio-darkmode.js
mkdocs_drawio/: __init__.py  plugin.py
mkdocs_drawio/js/: drawio-darkmode.js  drawio.js  viewer-static.min.js
plumbing/: index.html
print_page/: index.html
scripts/: clean_drawio_files.py
search/: search_index.json
tests/assets/: test.drawio
tests/code-blocks/: index.html
tests/configuration/: index.html
tests/error-handling/: index.html  test.drawio
tests/external-url/: index.html
tests/hyperlinks/: hyperlink.drawio  index.html
tests/pagging/: index.html  test.drawio
tests/png/: index.html
tests/relative-paths/: index.html
tests/relative-paths/example/: index.html
tests/simple-diagram/: index.html
tests/style-diagram/: index.html
tests/svg/: index.html
tests/zoom-diagram/: index.html
