[tool.poetry]
name = "mkdocs-drawio"
version = "1.8.0"
description = "MkDocs plugin for embedding Drawio files"
authors = [
    "Jan Larwig <jan@larwig.com>",
    "Sergey Lukin <onixpro@gmail.com>",
    "Yves Chevallier <yves.chevallier@heig-vd.ch"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuunit/mkdocs-drawio/"
homepage = "https://github.com/tuunit/mkdocs-drawio/"
keywords = [
    "mkdocs", "plugin", "markdown", "drawio"
]
packages = [
    { include = "mkdocs_drawio/plugin.py" },
]

[tool.poetry.urls]
"Documentation" = "https://github.com/tuunit/mkdocs-drawio/"
"Source" = "https://github.com/tuunit/mkdocs-drawio/"
"Tracker" = "https://github.com/tuunit/mkdocs-drawio/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
beautifulsoup4 = ">=4.0"
lxml = ">=4.0"
mkdocs = ">=1.3"

[tool.poetry.group.dev.dependencies]
poetry = "^2.0"
python = ">=3.9.0,<4.0"
black = ">=24.0"
ruff = "^0.9.2"
mkdocs-print-site-plugin = "^2.6.0"
mkdocs-material = "^9.5.50"
mkdocs-glightbox = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.plugins."mkdocs.plugins"]
drawio = 'mkdocs_drawio.plugin:DrawioPlugin'
