[tool.poetry]
name = "mkdocs-drawio"
version = "1.12.1"
description = "MkDocs plugin for embedding Drawio files"
authors = [
    "Jan Larwig <jan@larwig.com>",
    "Sergey Lukin <onixpro@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuunit/mkdocs-drawio/"
homepage = "https://github.com/tuunit/mkdocs-drawio/"
keywords = [
    "mkdocs", "plugin", "markdown", "drawio"
]
packages = [
    { include = "mkdocs_drawio" },
]
include = [
    "mkdocs_drawio/css/*.css",
    "mkdocs_drawio/js/*.js",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
requests = ">=2.0"
Jinja2 = ">=3.0"
beautifulsoup4 = ">=4.0"
lxml = ">=4.8"
mkdocs = ">=1.4"

[tool.poetry.group.dev.dependencies]
python = ">=3.8.0,<4.0"
black = ">=24.0"
ruff = "^0.9.2"
mkdocs-print-site-plugin = "^2.6.0"
mkdocs-material = "^9.5.50"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
drawio = 'mkdocs_drawio.plugin:DrawioPlugin'

[tool.setuptools.packages.find]
include = ["mkdocs_drawio*"]
exclude = ["example*"]
